@@ -1,7 +1,6 @@
 package com.example.planifest.controller.controllerview;
 
 import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -22,140 +21,120 @@ import com.example.planifest.service.StockMovementServiceImp;
 import com.example.planifest.service.SupplyServiceImp;
 import com.example.planifest.service.TaskServiceImp;
 import com.example.planifest.service.UserServiceImp;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 @Controller
 public class DashboardController {
 
-        @Autowired
-        private UserServiceImp userService;
+    @Autowired
+    private UserServiceImp userService;
 
-        @Autowired
-        private EventServiceImp eventService;
+    @Autowired
+    private EventServiceImp eventService;
 
-        @Autowired
-        private TaskServiceImp taskService;
+    @Autowired
+    private TaskServiceImp taskService;
 
-        @Autowired
-        private SupplyServiceImp supplyService;
+    @Autowired
+    private SupplyServiceImp supplyService;
 
-        @Autowired
-        private StockMovementServiceImp stockService;
+    @Autowired
+    private StockMovementServiceImp stockService;
 
-        // Dashboard de administrador
-        @GetMapping("/dashboard/admin")
-        public String adminDashboard(Model model) throws Exception {
+    // Dashboard de administrador
+    @GetMapping("/dashboard/admin")
+    public String adminDashboard(Model model) {
 
-                // --- Estadísticas generales ---
-                long totalEmpleados = userService.countEmployees();
-                long totalEventos = eventService.count();
-                long totalTareas = taskService.count();
-                long totalInsumos = supplyService.count();
+        long totalEmpleados = userService.countEmployees();
+        long totalEventos = eventService.count();
+        long totalTareas = taskService.count();
+        long totalInsumos = supplyService.count();
+        long tareasPendientes = taskService.getAll().stream()
+                .filter(task -> task.getStatus().name().equalsIgnoreCase("PENDING"))
+                .count();
 
-                long eventosFuturos = eventService.getAll().stream().filter(e -> e.getDate().isAfter(LocalDate.now()))
-                                .count();
-                long eventosRealizados = totalEventos - eventosFuturos;
+        List<String> actividadReciente = List.of(
+                "Se creó un nuevo evento empresarial",
+                "Se completó una tarea: Coordinación",
+                "Se actualizó el stock: Mantelería");
 
-                // Tareas pendientes y completadas
-                long tareasPendientes = taskService.getAll().stream()
-                                .filter(task -> task.getStatus().name().equalsIgnoreCase("PENDING")).count();
-                long tareasCompletadas = taskService.getAll().stream()
-                                .filter(task -> task.getStatus().name().equalsIgnoreCase("COMPLETED")).count();
+        List<Event> proximosEventos = eventService.getAll().stream()
+                .filter(e -> e.getDate().isAfter(LocalDate.now()))
+                .limit(5)
+                .collect(Collectors.toList());
 
-                // Actividad reciente y próximos eventos
-                List<String> actividadReciente = List.of("Se creó un nuevo evento empresarial",
-                                "Se completó una tarea: Coordinación", "Se actualizó el stock: Mantelería");
+        List<String> notificaciones = List.of(
+                "Nuevas tareas sin asignar",
+                "Stock bajo en bebidas");
 
-                List<Event> proximosEventos = eventService.getAll().stream()
-                                .filter(e -> e.getDate().isAfter(LocalDate.now())).limit(5)
-                                .collect(Collectors.toList());
+        List<User> empleados = userService.getAll().stream()
+                .filter(u -> u.getRole() == Role.EMPLOYEE)
+                .toList();
+        User empleadoDelMes = empleados.isEmpty() ? null : empleados.get(0);
 
-                // Empleados por rol
-                long empleadosAdmin = userService.getAll().stream().filter(u -> u.getRole() == Role.ADMIN).count();
-                long empleadosEmployee = userService.getAll().stream().filter(u -> u.getRole() == Role.EMPLOYEE)
-                                .count();
-                long empleadosOther = totalEmpleados - (empleadosAdmin + empleadosEmployee);
+        model.addAttribute("totalEmpleados", totalEmpleados);
+        model.addAttribute("totalEventos", totalEventos);
+        model.addAttribute("totalTareas", totalTareas);
+        model.addAttribute("totalInsumos", totalInsumos);
+        model.addAttribute("tareasPendientes", tareasPendientes);
+        model.addAttribute("actividadReciente", actividadReciente);
+        model.addAttribute("proximosEventos", proximosEventos);
+        model.addAttribute("notificaciones", notificaciones);
+        model.addAttribute("empleadoDelMes", empleadoDelMes);
+        model.addAttribute("activePage", "dashboard");
 
-                List<User> empleados = userService.getAll().stream().filter(u -> u.getRole() == Role.EMPLOYEE).toList();
+        return "dashboard/admin";
+    }
 
-                User empleadoDelMes = empleados.isEmpty() ? null
-                                : empleados.get((int) (Math.random() * empleados.size()));
+    // Dashboard de empleado (con el mapa)
+    @GetMapping("/dashboard/empleado")
+    public String empleadoDashboard(Model model) {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        String username = auth.getName(); 
 
-                model.addAttribute("empleadoDelMes", empleadoDelMes);
+        User empleado = userService.getAll().stream()
+                .filter(u -> u.getEmail().equalsIgnoreCase(username))
+                .findFirst()
+                .orElse(null);
 
-                // Notificaciones
-                List<String> notificaciones = List.of("Nuevas tareas sin asignar", "Stock bajo en bebidas");
+        if (empleado != null) {
+            List<Task> tareasEmpleado = taskService.getAll().stream()
+                    .filter(task -> task.getUser() != null &&
+                            task.getUser().getId().equals(empleado.getId()))
+                    .toList();
 
-                // JSON para gráficos de eventos
-                ObjectMapper mapper = new ObjectMapper();
-                String eventLabelsJson = mapper.writeValueAsString(proximosEventos.stream()
-                                .map(e -> e.getEventName() + " - "
-                                                + e.getDate().format(DateTimeFormatter.ofPattern("dd/MM")))
-                                .collect(Collectors.toList()));
-                String eventDataJson = mapper
-                                .writeValueAsString(proximosEventos.stream().map(e -> 1).collect(Collectors.toList()));
+            model.addAttribute("tareasAsignadas", tareasEmpleado);
 
-                // --- Agregar atributos al modelo ---
-                model.addAttribute("totalEmpleados", totalEmpleados);
-                model.addAttribute("totalEventos", totalEventos);
-                model.addAttribute("totalTareas", totalTareas);
-                model.addAttribute("totalInsumos", totalInsumos);
-                model.addAttribute("tareasPendientes", tareasPendientes);
-                model.addAttribute("tareasCompletadas", tareasCompletadas);
-                model.addAttribute("actividadReciente", actividadReciente);
-                model.addAttribute("proximosEventos", proximosEventos);
-                model.addAttribute("empleadosAdmin", empleadosAdmin);
-                model.addAttribute("empleadosEmployee", empleadosEmployee);
-                model.addAttribute("empleadosOther", empleadosOther);
-                model.addAttribute("empleadoDelMes", empleadoDelMes); // ✅ Dinámico
-                model.addAttribute("notificaciones", notificaciones);
-                model.addAttribute("eventLabelsJson", eventLabelsJson);
-                model.addAttribute("eventDataJson", eventDataJson);
-                model.addAttribute("eventosFuturos", eventosFuturos);
-                model.addAttribute("eventosRealizados", eventosRealizados);
-                model.addAttribute("activePage", "dashboard");
-
-                return "dashboard/admin";
+            if (!tareasEmpleado.isEmpty()) {
+                Event evento = tareasEmpleado.get(0).getEvent();
+                if (evento != null && evento.getLocation() != null) {
+                    String mapEmbedUrl = "https://www.google.com/maps/embed/v1/place?key=AIzaSyCgZPwudO2MG358I1CqrzctaVrIfclADcQ&q="
+                            + evento.getLocation().replace(" ", "+");
+                    model.addAttribute("mapEmbed", mapEmbedUrl);
+                }
+            }
+        } else {
+            model.addAttribute("tareasAsignadas", List.of());
         }
 
-        // Dashboard de empleado
-        @GetMapping("/dashboard/empleado")
-        public String empleadoDashboard(Model model) {
-                Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-                String username = auth.getName(); // email
+        model.addAttribute("activePage", "empleado");
+        return "dashboard/empleado";
+    }
 
-                User empleado = userService.getAll().stream().filter(u -> u.getEmail().equalsIgnoreCase(username))
-                                .findFirst().orElse(null);
+    // Dashboard de inventario
+    @GetMapping("/dashboard/stock")
+    public String stockDashboard(Model model) {
 
-                model.addAttribute("empleado", empleado); // <-- agregar al modelo
+        long totalSupplies = supplyService.count();
+        model.addAttribute("totalSupplies", totalSupplies);
 
-                List<Task> tareasEmpleado = (empleado != null)
-                                ? taskService.getAll().stream()
-                                                .filter(task -> task.getUser() != null
-                                                                && task.getUser().getId().equals(empleado.getId()))
-                                                .toList()
-                                : List.of();
+        List<Supply> criticalSupplies = supplyService.getAll().stream()
+                .filter(s -> s.getCurrentStock() < s.getMinStock())
+                .collect(Collectors.toList());
+        model.addAttribute("criticalSupplies", criticalSupplies);
+        model.addAttribute("lowStockCount", criticalSupplies.size());
 
-                model.addAttribute("tareasAsignadas", tareasEmpleado);
-                model.addAttribute("activePage", "empleado");
+        model.addAttribute("activePage", "stock");
 
-                return "dashboard/empleado";
-        }
-
-        // Dashboard de inventario
-        @GetMapping("/dashboard/stock")
-        public String stockDashboard(Model model) {
-
-                long totalSupplies = supplyService.count();
-                model.addAttribute("totalSupplies", totalSupplies);
-
-                List<Supply> criticalSupplies = supplyService.getAll().stream()
-                                .filter(s -> s.getCurrentStock() < s.getMinStock()).collect(Collectors.toList());
-                model.addAttribute("criticalSupplies", criticalSupplies);
-                model.addAttribute("lowStockCount", criticalSupplies.size());
-
-                model.addAttribute("activePage", "stock");
-
-                return "/dashboard/stock";
-        }
+        return "/dashboard/stock";
+    }
 }
